토스 표기 수정

--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -179,7 +179,7 @@
                                     <div class="divider_h_o2">
                                         <div class="divider_h_i2"></div>
                                     </div>
-                                    <div class="tile_value"><%= senior.toss_num %></div>
+                                    <div class="tile_value">Lv. <%= senior.toss_num %></div>
                                 </div>
                             </div>
 
@@ -196,7 +196,7 @@
                                     <% } else if(senior.opic_num == 2) { %>
                                       <div class="tile_value">IM3</div>
                                     <% } else if(senior.opic_num == 3) { %>
-                                      <div class="tile_value">IM2</div>  
+                                      <div class="tile_value">IM2</div>
                                     <% } else if(senior.opic_num == 4) { %>
                                       <div class="tile_value">IM1</div>
                                     <% } else if(senior.opic_num == 5) { %>
