--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -332,13 +332,13 @@
                             <tr>
                                 <td>
 
-                                    <input type="text" id="update_Date" value=<%= item.date %> class="update_Daily">
+                                    <input type="text" id="update_Date"  class="update_Daily"><%= item.date %>
                                 </td>
                                 <td>
-                                    <input type="text" id="update_Content" value=<%= item.content %> class="update_Daily">
+                                    <input type="text" id="update_Content"  class="update_Daily"><%= item.content %>
                                 </td>
                                 <td>
-                                    <input type="text" id="update_Result" value=<%= item.result %> class="update_Daily">
+                                    <input type="text" id="update_Result" class="update_Daily"><%= item.result %>
                                 </td>
                             </tr>
                             <%
