메시지 버튼 이벤트 부분 수정

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,8 +24,8 @@
             </div>
             <div id="user_Input">
                 <div id="help_Vertical">
-                    <div id="message_Div">
-                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal" />
+                    <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
 
                         <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
                     </div>
