--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -11,7 +11,9 @@ body,html{
     flex-direction: column;
     align-items: center;
 }
-
+.std_list_right,.std_list_left{
+    color: white;
+}
 #logo_Image{
     margin-left: 3%;
     cursor: pointer;
