--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -222,8 +222,8 @@
 
     <script>
         function scoreGraph() {
-            var labels = ["2.0 미만", "2.0~2.5", "2.5~3.0", "3.0~3.5", "3.5~4.0", "4.0~4.5"];
-            var datas = [12, 16, 14, 19, 9, 6];
+            var labels = ["2.5 미만", "2.5~3.0", "3.0~3.5", "3.5~4.0", "4.0~4.5"];
+            var datas = [12, 16, 14, 19, 9];
             showGraph("학점 별 학생 분포도", labels, datas);
         }
 
