--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#9a0007">
     <title>
         <%= title %>
     </title>
@@ -131,10 +132,11 @@
         })
 
         function newMsgCheck(){
-          var blink = document.getElementById("message_Update");
-          blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
+            var blink = document.getElementById("message_Update");
+            blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
         }
         var newMsg;
+        //var wtchDog;
 
 
         //setInterval(newMsgCheck, 500);
@@ -152,18 +154,32 @@
         });
 
         var a = '<%= new_msg %>';
+        //var i = false;
         if(a) {
           console.log('ok');
           // setInterval(newMsgCheck, 500);
           newMsg = setInterval(function(){
             var blink = document.getElementById("message_Update");
             blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
+            /*if(i == false) {
+                i = true;
+                alert("새 메시지가 도착했습니다.");
+                
+            }*/
           }, 500);
         }
         else {
           console.log('no');
           clearInterval(newMsgCheck);
         }
+
+        /*wtchDog = setInterval(function(){
+            console.log('');
+            var a = '<%= new_msg %>';
+            if(a) {
+                console.log('새로운 메시지');
+            }
+          }, 500);*/
 
         // setInterval(function(){
         //   $.get('/msg/msgList', function(data){
