--- a/views/msg_detail.ejs
+++ b/views/msg_detail.ejs
@@ -1,37 +1,36 @@
-
 <% for(var i=0; i<msgList.length; i++) { %>
-    <div class="modal fade" id="myModal_Content<%= msgList[i].id %>">
+    <div class="modal dialogBack" id="myModal_Content<%= msgList[i].id %>">
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content dialogAnim">
                 <!-- Modal Header -->
-                <div class="modal-header" style="background-color: brown">
+                <div class="modal-header modal_header_styler">
                     <h4 class="modal-title" style="color: white">Message</h4>
                 </div>
                 <!-- Modal body -->
-                <div class="modal-body">
+                <div class="modal-body modal_body_styler">
                     <div class="row">
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <label for="firstName" class="col-sm-12 control-label">보낸 사람</label>
-                        <input type="text" value="<%= msgList[i].post_name %>" class="form-control" readonly>
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <label for="firstName" class="col-sm-12 control-label">보낸 사람</label>
+                            <input type="text" value="<%= msgList[i].post_name %>" class="form-control" readonly>
+                        </div>
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <label for="firstName" class="col-sm-12 control-label">날짜</label>
+                            <input type="text" id="score" value="<%= msgList[i].date %>" class="form-control" readonly>
+                        </div>
                     </div>
-                    <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                        <label for="firstName" class="col-sm-12 control-label">날짜</label>
-                        <input type="text" id="score" value="<%= msgList[i].date %>" class="form-control" readonly>
-                    </div>
-                </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <label for="firstName" class="col-sm-12 control-label">제목</label>
                         <input type="text" id="score" value="<%= msgList[i].title %>" class="form-control" readonly>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <label for="firstName" class="col-sm-12 control-label">내용</label>
-                            <textarea  rows="7"id="score" class="form-control" readonly><%= msgList[i].contents %>
-                            </textarea>
-                        </div>
+                        <label for="firstName" class="col-sm-12 control-label">내용</label>
+                        <textarea  rows="7"id="score" class="form-control" readonly><%= msgList[i].contents %>
+                        </textarea>
+                    </div>
 
                 </div>
                 <!-- Modal footer -->
-                <div class="modal-footer">
+                <div class="modal-footer modal_footer_styler">
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal_Reply<%= msgList[i].id %>">답장</button>
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                 </div>
@@ -43,15 +42,15 @@
 
 
 
-    <div class="modal fade" id="myModal_Reply<%= msgList[i].id %>">
+    <div class="modal dialogBack" id="myModal_Reply<%= msgList[i].id %>">
             <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content dialogAnim">
                     <!-- Modal Header -->
-                    <div class="modal-header" style="background-color: brown">
+                    <div class="modal-header modal_header_styler">
                         <h4 class="modal-title" style="color: white">Message</h4>
                     </div>
                     <!-- Modal body -->
-                    <div class="modal-body">
+                    <div class="modal-body modal_body_styler">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <label for="firstName" class="col-sm-12 control-label">받는 사람</label>
                             <input type="text" value="<%= msgList[i].post_name %>" class="form-control" >
@@ -69,7 +68,7 @@
 
                     </div>
                     <!-- Modal footer -->
-                    <div class="modal-footer">
+                    <div class="modal-footer modal_footer_styler">
                         <button type="button" class="btn btn-primary" data-dismiss="modal" id='goReply<%= msgList[i].id %>'>보내기</button>
                         <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                     </div>
@@ -120,3 +119,112 @@
         });
         </script>
   <% } %>
+
+  <style>
+        .dialogAnim {
+        animation: animDialog .2s forwards;
+        }
+    
+        .dialogBack {
+            animation: animDialogBack .2s forwards;
+        }
+    
+        .modal_header_styler {
+            border-bottom: 2px solid #9a0007 !important;
+            background-color: #d32f2f;
+            border-top-left-radius: 7px;
+            border-top-right-radius: 7px;
+        }
+
+        .modal_body_styler {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+    
+        .modal_footer_styler {
+            border-top: 1px solid #c7c7c7 !important;
+            border-bottom: 2px solid #c2c2c2 !important;
+            background-color: #f5f5f5;
+            border-bottom-left-radius: 7px;
+            border-bottom-right-radius: 7px;
+        }
+
+        .btn-primary {
+            outline: none !important;
+            transition: all .1333s ease-in;
+            transition-property: background-color, border-color, box-shadow;
+        }
+
+        .btn-primary:hover {
+            border-color: #337ab7 !important;
+            background-color: #4aabff !important;
+            box-shadow: 0 2px 4px black;
+        }
+    
+        .btn-danger {
+            outline: none !important;
+            transition: all .1333s ease-in;
+            transition-property: background-color, border-color, box-shadow;
+        }
+    
+        .btn-danger:hover {
+            border-color: #d9534f !important;
+            background-color: #ff625d !important;
+            box-shadow: 0 2px 4px black;
+        }
+
+        textarea {
+            border: 1px solid #9a0007 !important;
+            border-radius: 3px;
+            margin-top: 0 !important;
+            width: 100%;
+            resize: none;
+            outline: none;
+            transition: all .2s ease-in;
+            transition-property: border-color;
+        }
+
+        input {
+            border-left: 0;
+            border-right: 0;
+            border-top: 0;
+            border-bottom: 1px #9a0007 solid;
+            background-color: rgba(0, 0, 0, 0);
+            margin-left: 4px !important;
+            margin-top: -2px !important;
+            padding-left: 4px;
+            padding-bottom: 0px;
+            width: 92%;
+            outline: none;
+            
+            transition: all .2s ease-in;
+            transition-property: border-color;
+        }
+
+        input:focus {
+            border-color: #ff0000 !important;
+        }
+
+        textarea:focus {
+            border-color: #ff0000 !important;
+        }
+    
+        @keyframes animDialog {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+    
+        @keyframes animDialogBack {
+            0% {
+                background-color: rgba(0, 0, 0, 0);
+            }
+            100% {
+                background-color: rgba(0, 0, 0, .333);
+            }
+        }
+    </style>
