--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= user %>님의 마이페이지</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/mypage.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
@@ -19,19 +20,19 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal" />
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                    <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
                 </div>
 
-                  <div>
-                      &nbsp;
-                      <strong style="cursor:pointer"> <%= user %></strong>
-                  </div>
+                <div>
+                    &nbsp;
+                    <strong style="cursor:pointer"> <%= user %></strong>
+                </div>
 
-                    <div>
-                            <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
-                        </div>
+                <div>
+                    <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
+                </div>
             </div>
         </div>
     </div>
