--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>User Detail</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= senior.user_id %>님의 상세정보</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/userDetail.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,8 +22,8 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
                 <div>
