--- a/views/userSearch.ejs
+++ b/views/userSearch.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>User Search</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/userSearch.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -18,8 +19,8 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                    <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
                 </div>
                 <div>
@@ -148,9 +149,12 @@
         </div>
 
         <div class="search_button_div">
-            <!-- <div class="search_button" onclick="addStudentList(1,2,3)">  검색 버튼 --> -->
-            <div class="search_button">
+            <!-- <div class="search_button" onclick="addStudentList(1,2,3)">  검색 버튼 -->
+            <div class="search_button" id="searchBtn" style="cursor: pointer;">
                 <span style="margin-right: 28px;"><img src="images/search.png" alt="검색" style="width: 40px; margin-right: 4px; margin-left: -8px;">검색</span>
+            </div>
+            <div class="search_button" id="inSearching" style="visibility:hidden; height:44px; margin-top: -44px;">
+                <span style="margin-right: -24px; color:lightgray; margin-top: 8px;">검색 중...</span>
             </div>
         </div>
 
