--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,54 +9,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/login.js"></script>
-    <title><%= title %></title>
+    <title>
+        <%= title %>
+    </title>
 
 </head>
+
 <body>
-  <div id="top_Div">
-      <div id="vertical_Helper">
-        <img src="/images/logo4.png" id="logo_Image">
+    <div id="top_Div">
+        <div id="vertical_Helper">
+            <img src="/images/logo4.png" id="logo_Image">
         </div>
-      </div>
+    </div>
 
 
-      <div id="bottom_Div">
-            <div id="login_Div" class="col-sm-6">
-                    <table>
-                        <tr>
-                            <td>
-                                <input class='login_input' type="text" placeholder="아이디" / id="login_id" tabindex="1">
-                                </br>
-                            </td>
+    <div id="bottom_Div">
+        <div id="login_Div" class="col-sm-6">
+            <table>
+                <tr>
+                    <td>
+                        <input class='login_input' type="text" placeholder="아이디" / id="login_id" tabindex="1">
+                        </br>
+                    </td>
 
-                            <td rowspan="2">
-                                <button id="loginButton" tabindex="3">로그인</button>
-                            </td>
+                    <td rowspan="2">
+                        <button id="loginButton" tabindex="3">로그인</button>
+                        <button id="loginP">교직원 전용</button>
+                    </td>
 
-                        </tr>
-                        <tr>
-                            <td>
-                                <input class='login_input' type="password" placeholder="비밀번호" / id="login_password" tabindex="2">
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <p id="join_Button" tabindex="4">회원가입</p>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-      </div>
+                </tr>
+                <tr>
+                    <td>
+                        <input class='login_input' type="password" placeholder="비밀번호" / id="login_password" tabindex="2">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <p id="join_Button" tabindex="4">학생 회원가입</p>
+                        <p id="join_ButtonP" tabindex="4">교직원 회원가입</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
 <script>
-$(document).keypress(function(e) {
-    if(e.which == 13) {
-      $('#loginButton').click();
-    return false;
-    }
-});
-    $('#join_Button').click(function(){
-      $(window).attr('location','/join');
+    $(document).keypress(function (e) {
+        if (e.which == 13) {
+            $('#loginButton').click();
+            return false;
+        }
     });
+    $('#join_Button').click(function () {
+        $(window).attr('location', '/join');
+    });
+    $('#join_ButtonP').click(function () {
+        $(window).attr('location', '/joinP');
+    });
+    $('#loginP').click(function(){
+        $(window).attr('location', '/loginP');
+    })
 </script>
+
 </html>
