--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -106,7 +106,7 @@
                                       <div class="tile_value">IM1</div>
                                     <% } else if(avg.opicAvg == 5) { %>
                                       <div class="tile_value">IL</div>
-                                    <% } else if(avg.opicAvg == 6) { %>
+                                    <% } else if(avg.opicAvg < 0) { %>
                                       <div class="tile_value">0</div>
                                     <% } %>
                                 </div>
