--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -61,13 +61,13 @@ body,html{
     width: 100%;
     height:55%;
 }
-#three_button_Div{
+#four_button_Div{
     display: flex;
     width: 96%;
     height: 85%;
     margin-left: 2%;
 }
-.three_Button{
+.four_Button{
     width: 33.5%;
     height: 100%;
     margin-left: 0.2%;
@@ -89,17 +89,21 @@ margin-top: 20%;
     height: 40%;
     font-size: 25px;
 }
-.three_Button:nth-child(1):hover{
+.four_Button:nth-child(1):hover{
     cursor: pointer;
-    background-color:purple;
+    background-color:red;
 }
-.three_Button:nth-child(2):hover{
+.four_Button:nth-child(2):hover{
     cursor: pointer;
-    background-color:orangered;
+    background-color:red;
 }
-.three_Button:nth-child(3):hover{
+.four_Button:nth-child(3):hover{
     cursor: pointer;
-    background-color:green;
+    background-color:red;
+}
+.four_Button:nth-child(4):hover{
+    cursor: pointer;
+    background-color:red;
 }
 td{
     background: none;
@@ -157,15 +161,15 @@ tbody tr:hover{
         height: 100%;
         background-color:brown;
     }
-    #three_button_Div{
+    #four_button_Div{
         display: block;
         height: 100%;
         width: 100%;
         margin-left: 0;
     }
-    .three_Button{
+    .four_Button{
         width: 100%;
-        height: 33.33%;
+        height: 25%;
         margin: 0;
     }
     #top_Div{
@@ -179,7 +183,7 @@ tbody tr:hover{
     .top_Part_Button img{
         margin-top: 4.7%;
         }
-        .three_Button:nth-child(1),.three_Button:nth-child(2){
+        .four_Button:nth-child(1),.four_Button:nth-child(2),.four_Button:nth-child(3){
             border-bottom-color: gray;
             border-bottom-style: solid;
         }
@@ -188,6 +192,9 @@ tbody tr:hover{
         }
         #logo_Div{
             width: 65%;
+        }
+        .mypageImage{
+            width: 15%;
         }
   }
 @media only screen and (max-width: 1025px) and (min-width: 767px)  {
