--- a/public/stylesheets/pslist.css
+++ b/public/stylesheets/pslist.css
@@ -133,3 +133,40 @@ body {
 #message_Update {
   width: 20px;
 }
+
+@media only screen and (max-width: 954px) and (min-width: 660px)  {
+  .modal-content {
+      width: 112% !important;
+      margin-left: -36px !important;
+  }
+  .bottom_Part_Button {
+      padding-top: 40px;
+  }
+}
+@media only screen and (max-width: 766px) and (min-width: 300px)  {
+  .modal-content {
+      width: 102% !important;
+      margin-left: -7px !important;
+  }
+  #logo_Div{
+      width: 40%;
+  }
+  .result-container {
+    width: 100% !important;
+  }
+}
+@media only screen and (max-width: 500px) and (min-width: 300px)  {
+  .modal-content {
+      width: 100% !important;
+      margin-left: 0px !important;
+  }
+  #logo_Div{
+      width: 43% !important;
+  }
+}
+@media only screen and (max-width: 575px) and (min-width: 300px)  {
+  .col-xs-4_s {
+    flex: 0 0 33.333333% !important;
+    max-width: 33.333333% !important;
+  }
+}
