--- a/views/pslist.ejs
+++ b/views/pslist.ejs
@@ -25,7 +25,7 @@
                 </div>
                 <div>
                     &nbsp;
-                    <strong style="cursor:pointer">user</strong>
+                    <strong style="cursor:pointer"> <%= user %></strong>
                 </div>
                 <div>
                     <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
