--- a/views/main.ejs
+++ b/views/main.ejs
@@ -141,6 +141,9 @@
             $('.four_Button:eq(2)').click(function () {
                 $(window).attr('location', '/userSearch');
             })
+            $('.four_Button:eq(3)').click(function () {
+                $(window).attr('location', '/pflist');
+            })
 
             function newMsgCheck() {
                 var blink = document.getElementById("message_Update");
