교수 리스트 및 메세지 추가

--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>User Detail</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= senior.user_id %>님의 상세정보</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/userDetail.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -21,8 +22,8 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
                 <div>
@@ -304,34 +305,6 @@
                         </tbody>
                     </table>
                     </div>
-                    <!-- <div class="apply_list_div">
-                        <div class="container-fluid apply_list_header">
-                            <div class="row">
-                                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                    <p class="apply_list_header_p">일자</p>
-                                </div>
-                                <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
-                                    <p class="apply_list_header_p">내용</p>
-                                </div>
-                                <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-                                    <p class="apply_list_header_p">결과</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div id="aply_list_parent">
-                            데이터베이스에서 받아온 정보를 배열로 저장하고 addApplyList(); 함수로 배열값을 넘김 /**************************예제*****************************/
-                            <script>
-                                var 지원날짜 = ["18.03.02", "18.03.10", "18.04.01", "18.05.13", "18.05.19"];
-                                var 지원내용 = ["회사A 업무1 공개채용", "회사B 업무3 인턴",
-                                    "회사C 업무2 공개채용", "회사D 업무4 인턴", "회사E 업무5 인턴"];
-                                var 합격여부 = ["불합", "불합", "대기", "합격", "대기"];
-
-                                addApplyList(지원날짜, 지원내용, 합격여부);
-                            </script> /**********************************************************/
-
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </div>
