--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -3,78 +3,79 @@ html{
     height: 100%;
     overflow: hidden;
     margin: 0;
-}
-body{
+  }
+  body{
     width: 100%;
     height: 100%;
-    background-image: url('/images/login_Back_Image2.png');
+    background-image: url('/images/login_Back_Image.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     margin: 0;
-}
-#top_Div{
+  }
+  #top_Div{
     width: 100%;
     height: 55%;
     text-align: center;
     display: table;
-}
-#vertical_Helper{
+  }
+  #vertical_Helper{
     width: 100%;
     height: 100%;
     display: table-cell;
     vertical-align: bottom;
-}
-#logo_Image{
+  }
+  #logo_Image{
     height: 144px;
-}
-#bottom_Div{
+  }
+  #bottom_Div{
     width:100%;
     height: 35%;
-}
-
-table{
+  }
+  
+  table{
     width: 40%;
     margin-left: 30%;
-}
-table input{
+  }
+  table input{
     border-radius: 3px;
     width:97%;
     height: 35px;
     opacity: 0.7;
-}
-table button{
+  }
+  table button{
     background-color:brown;
     border-color: brown;
     border-style: solid;
     color: white;
-    height: 85px;
+    height: 38px;
     cursor: pointer;
     border-radius: 3px;
     width: 100%;
-}
-table p{
+    margin-top: 1%;
+  }
+  table p{
     color: lightgray;
     cursor: pointer;
     text-align: center;
-}
-@media only screen and (max-height: 370px) and (min-height: 0)  {  
+  }
+  @media only screen and (max-height: 370px) and (min-height: 0)  {  
     #logo_Image{
         margin-top: -10px;
         height: 144px;
     }
-}
-@media only screen and (max-width: 480px) and (min-width: 64px)  {
+  }
+  @media only screen and (max-width: 480px) and (min-width: 64px)  {
     table{
         width: 95% !important;
         margin-left: 2% !important;
     }
-}
-@media screen and (orientation: portrait) {
+  }
+  @media screen and (orientation: portrait) {
     body{
         width: 100%;
         height: 100%;
-        background-image: url('/images/login_Back_Image_Mobile2.png');
+        background-image: url('/images/login_Back_Image_Mobile.png');
         background-repeat: no-repeat;
         background-size: cover;
     }
@@ -91,18 +92,5 @@ table p{
     #bottom_Div{
         height: 45%;
     }
-    /* #content_Div{
-        display: table-cell;
-    }
-    #login_Div{
-        width: 70%;
-        height: 100%;
-        margin-left: 15%;
-        text-align: center;
-        display: block;
-    }
-    #logo_Div{
-        width: 100%;
-    } */
-
+  
   }
