--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#9a0007">
     <title>
         <%= title %>
     </title>
@@ -13,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css" />
 </head>
 
 <body>
@@ -24,10 +25,8 @@
             </div>
             <div id="user_Input">
                 <div id="help_Vertical">
-                    <div id="message_Div">
-                        <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal" />
-
-                        <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
+                    <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                        <img id="message_Update" src="/images/message_Icon.png" height="13%" />
                     </div>
                     <div>
                         &nbsp;
@@ -45,144 +44,133 @@
 
     <div id="bottom_Div">
 
-        <div id="three_button_Div">
-            <div class="three_Button">
-                <div class="top_Part_Button">
-                    <img src="/images/user.png" width="20%" height="auto">
-                </div>
-                <div class="bottom_Part_Button">
-                    MY PAGE
+   
+            <div id="four_button_Div">
+                <div class="four_Button">
+                    <div class="top_Part_Button">
+                        <img class="mypageImage"src="/images/user.png" width="20%" height="auto">
+                    </div>
+                    <div class="bottom_Part_Button">
+                        MY PAGE
+                    </div>
                 </div>
 
+                <div class="four_Button">
+
+                    <div class="top_Part_Button">
+                        <img class="mypageImage"src="/images/graph.png" width="20%" height="auto">
+                    </div>
+                    <div class="bottom_Part_Button">
+                        Spec 비교
+                    </div>
+                </div>
+
+
+           
+                <div class="four_Button">
+                    <div class="top_Part_Button">
+                        <img class="mypageImage"src="/images/users.png" width="20%" height="auto">
+                    </div>
+                    <div class="bottom_Part_Button">
+                        유저별 Spec
+                    </div>
+                </div>
+
+                <div class="four_Button">
+
+                    <div class="top_Part_Button">
+                        <img class="mypageImage"src="/images/professor.png" width="20%" height="auto">
+                    </div>
+                    <div class="bottom_Part_Button">
+                        Professor
+                    </div>
+                </div>
+                </div>
+     
+
+            </button>
+
+            <!-- The Modal -->
+            <div class="modal fade" id="myModal">
+                <div class="modal-dialog" modal-lg>
+                    <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header" style="background-color: brown">
+                            <h4 class="modal-title" style="color: white">Message</h4>
+                        </div>
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>보낸사람</th>
+                                        <th>제목</th>
+                                        <th>날짜</th>
+                                        <th>읽음</th>
+                                    </tr>
+                                </thead>
+                                <tbody id='msg_list'>
+                                    <!-- msg list show -->
+                                </tbody>
+                            </table>
+                        </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <button id='msgListCloseBtn' type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                        </div>
+
+                    </div>
+                </div>
             </div>
-            <div class="three_Button">
 
-                <div class="top_Part_Button">
-                    <img src="/images/graph.png" width="20%" height="auto">
-                </div>
-                <div class="bottom_Part_Button">
-                    Spec 비교
-                </div>
 
-            </div>
-            <div class="three_Button">
+            <!-- msg detail show -->
+            <div id='msg_detail'></div>
 
-                <div class="top_Part_Button">
-                    <img src="/images/users.png" width="20%" height="auto">
-                </div>
-                <div class="bottom_Part_Button">
-                    유저별 Spec
-                </div>
-            </div>
+
         </div>
+        <script>
+            $('input').css('background', 'none');
+            $('textarea').css('background', 'none');
+            $('.four_Button:eq(0)').click(function () {
+                $(window).attr('location', '/mypage');
+            })
+            $('.four_Button:eq(1)').click(function () {
+                $(window).attr('location', '/specCompare');
+            })
+            $('.four_Button:eq(2)').click(function () {
+                $(window).attr('location', '/userSearch');
+            })
 
-        </button>
-
-        <!-- The Modal -->
-        <div class="modal fade" id="myModal">
-            <div class="modal-dialog" modal-lg>
-                <div class="modal-content">
-                    <!-- Modal Header -->
-                    <div class="modal-header" style="background-color: brown">
-                        <h4 class="modal-title" style="color: white">Message</h4>
-                    </div>
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <table class="table">
-                            <thead>
-                                <tr>
-                                    <th>보낸사람</th>
-                                    <th>제목</th>
-                                    <th>날짜</th>
-                                    <th>읽음</th>
-                                </tr>
-                            </thead>
-                            <tbody id='msg_list'>
-                                <!-- msg list show -->
-                            </tbody>
-                        </table>
-                    </div>
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button id='msgListCloseBtn' type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                    </div>
-
-                </div>
-            </div>
-        </div>
+            function newMsgCheck() {
+                var blink = document.getElementById("message_Update");
+                blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
+            }
+            var newMsg;
 
 
-        <!-- msg detail show -->
-        <div id='msg_detail'></div>
+            $.get('/msg/msgList', function (data) {
+                $('#msg_list').html(data);
+            });
 
-
-    </div>
-    <script>
-        $('input').css('background', 'none');
-        $('textarea').css('background', 'none');
-        $('.three_Button:eq(0)').click(function () {
-            $(window).attr('location', '/mypage');
-        })
-        $('.three_Button:eq(1)').click(function () {
-            $(window).attr('location', '/specCompare');
-        })
-        $('.three_Button:eq(2)').click(function () {
-            $(window).attr('location', '/userSearch');
-        })
-
-        function newMsgCheck(){
-          var blink = document.getElementById("message_Update");
-          blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
-        }
-        var newMsg;
-
-
-        //setInterval(newMsgCheck, 500);
-        $('#message_Update').click(function () {
-            // $(this).css('display', 'none');
-            // $('#message').css('display', 'block');
-        })
-
-        $.get('/msg/msgList', function(data){
-          $('#msg_list').html(data);
-        });
-
-        $.get('/msg/msgDetail', function(data){
-          $('#msg_detail').html(data);
-        });
-
+            $.get('/msg/msgDetail', function (data) {
+                $('#msg_detail').html(data);
+            });
         var a = '<%= new_msg %>';
+        //var i = false;
         if(a) {
           console.log('ok');
           // setInterval(newMsgCheck, 500);
           newMsg = setInterval(function(){
             var blink = document.getElementById("message_Update");
             blink.style.visibility = blink.style.visibility == "" ? "hidden" : "";
+ 
           }, 500);
         }
         else {
           console.log('no');
           clearInterval(newMsgCheck);
         }
-
-        // setInterval(function(){
-        //   $.get('/msg/msgList', function(data){
-        //     $('#msg_list').html(data);
-        //   });
-        //
-        //   $.get('/msg/msgDetail', function(data){
-        //     $('#msg_detail').html(data);
-        //   });
-        //
-        //   if(a) {
-        //     console.log('ok');
-        //     setInterval(newMsgCheck, 500);
-        //   }
-        //   else {
-        //     console.log('no');
-        //     clearInterval(newMsgCheck);
-        //   }
-        // }, 6000);
 
         $('#msgListCloseBtn').click(function(){
           clearInterval(newMsg);
