--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -4,13 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= user %>님의 마이페이지</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/mypage.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/mypage.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div id="nav_Div">
@@ -19,19 +21,19 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal" />
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                    <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
                 </div>
 
-                  <div>
-                      &nbsp;
-                      <strong style="cursor:pointer"> <%= user %></strong>
-                  </div>
+                <div>
+                    &nbsp;
+                    <strong style="cursor:pointer"> <%= user %></strong>
+                </div>
 
-                    <div>
-                            <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
-                        </div>
+                <div>
+                    <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
+                </div>
             </div>
         </div>
     </div>
@@ -144,47 +146,42 @@
 
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
-                                <label for="firstName" class="col-sm-12 control-label">학점</label>
-                                <input type="text" id="score" value=<%= rows[0].grade %>  class="form-control">
-
+                                <label for="firstName" class="col-sm-6 control-label">학점</label>
+                                <input type="text" id="score1" value=<%= rows[0].grade %> class="supportForm form-control">
                             </div>
 
 
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">토익-Toeic</label>
-                                <input type="text" id="toeic" value=<%= rows[0].toeic %> class="form-control">
+                                <input type="text" id="toeic1" value=<%= rows[0].toeic %> class="form-control">
                             </div>
 
 
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">토스-Toeic Speaking</label>
-                                <select class="form-control"  id="toss">
-                                    <option>미응시</option>
-                                    <option>Level1</option>
-                                    <option>Level2</option>
-                                    <option>Level3</option>
-                                    <option>Level4</option>
-                                    <option>Level5</option>
-                                    <option>Level6</option>
-                                    <option>Level7</option>
-                                    <option>Level8</option>
+                                <select class="b form-control" id="toss" name="toss_grade">
+                                    <option selected="selected">미응시</option>
+                                    <option>Lv4 이하</option>
+                                    <option>Lv5</option>
+                                    <option>Lv6</option>
+                                    <option>Lv7</option>
+                                    <option>Lv8</option>
                                 </select>
                             </div>
 
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">오픽-Opic</label>
-                                <select class="form-control" id="opic">
-                                    <option>미응시</option>
-                                    <option>NL</option>
-                                    <option>NM</option>
-                                    <option>NH</option>
-                                    <option>IL</option>
-                                    <option>IM</option>
-                                    <option>IH</option>
+                                <select class="c form-control" id="opic" name="opic_grade">
+                                    <option value="1">미응시</option>
                                     <option>AL</option>
+                                    <option>IH</option>
+                                    <option>IM3</option>
+                                    <option>IM2</option>
+                                    <option>IM1</option>
+                                    <option>IL</option>
                                 </select>
                             </div>
 
@@ -193,13 +190,12 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">봉사활동 횟수</label>
-                                <select class="form-control" id="volunteer">
-                                    <option>0번</option>
-                                    <option>1번</option>
-                                    <option>2번</option>
-                                    <option>3번</option>
-                                    <option>4번</option>
-                                    <option>5회이상</option>
+                                <select class="form-control" id="volunteer1" name="volunterr_num">
+                                    <option>0</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                                 </select>
                             </div>
 
@@ -208,13 +204,12 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">인턴 경험</label>
-                                <select class="form-control" id="intern">
-                                    <option>0번</option>>
-                                    <option>1번</option>
-                                    <option>2번</option>
-                                    <option>3번</option>
-                                    <option>4번</option>
-                                    <option>5회이상</option>
+                                <select class="form-control" id="intern1" name="intern_num">
+                                    <option>0</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                                 </select>
                             </div>
 
@@ -222,13 +217,12 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">공모전 수상</label>
-                                <select class="form-control" id="Competition">
-                                    <option>0번</option>
-                                    <option>1번</option>
-                                    <option>2번</option>
-                                    <option>3번</option>
-                                    <option>4번</option>
-                                    <option>5회이상</option>
+                                <select class="form-control" id="Competition1" name="competition_num">
+                                    <option>0</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                </select>
                                 </select>
                             </div>
 
@@ -236,13 +230,11 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">해외 연수</label>
-                                <select class="form-control" id="aborad">
-                                    <option>0번</option>>
-                                    <option>1번</option>
-                                    <option>2번</option>
-                                    <option>3번</option>
-                                    <option>4번</option>
-                                    <option>5회이상</option>
+                                <select class="form-control" id="aboard1" name="aboard_num">
+                                    <option>0</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
                                 </select>
                             </div>
 
@@ -250,22 +242,15 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                                 <label for="firstName" class="col-sm-12 control-label">자격증</label>
-                                <select class="form-control" id="certificate">
-                                    <option>0개</option>>
-                                    <option>1개</option>
-                                    <option>2개</option>
-                                    <option>3개</option>
-                                    <option>4개</option>
-                                    <option>5개이상</option>
+                                <select class="form-control" id="certificate1" name="certificate_num">
+                                    <option>0</option>
+                                    <option>1</option>
+                                    <option>2</option>
+                                    <option>3</option>
+                                    <option>4</option>
                                 </select>
                             </div>
                         </div>
-
-
-
-
-
-
 
                     <div class="form-group">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="reform">
