--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spec Compare</title>
+    <meta name="theme-color" content="#9a0007">
+    <title><%= title %></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/specCompare.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -22,8 +23,8 @@
         </div>
         <div id="user_Input">
             <div id="help_Vertical">
-                <div id="message_Div">
-                    <img id="message_Update" src="/images/message_Icon.png" height="13%" data-toggle="modal" data-target="#myModal"/>
+                <div id="message_Div" data-toggle="modal" data-target="#myModal">
+                    <img id="message_Update" src="/images/message_Icon.png" height="13%"/>
                     <!-- <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" /> -->
                 </div>
                 <div>
@@ -40,7 +41,7 @@
     <div class="article_div">
         <div class="user_div">
             <h3 style="margin-left: auto;margin-right: auto;padding-left: 8px;color: rgb(255, 255, 255);">
-                직군 스펙 비교
+                    <%= jobPart %> 직군 스펙 비교
             </h3>
         </div>
 
@@ -105,7 +106,7 @@
                                       <div class="tile_value">IM1</div>
                                     <% } else if(avg.opicAvg == 5) { %>
                                       <div class="tile_value">IL</div>
-                                    <% } else if(avg.opicAvg == 6) { %>
+                                    <% } else if(avg.opicAvg < 0) { %>
                                       <div class="tile_value">0</div>
                                     <% } %>
                                 </div>
@@ -222,8 +223,8 @@
 
     <script>
         function scoreGraph() {
-            var labels = ["2.0 미만", "2.0~2.5", "2.5~3.0", "3.0~3.5", "3.5~4.0", "4.0~4.5"];
-            var datas = [12, 16, 14, 19, 9, 6];
+            var labels = ["2.5 미만", "2.5~3.0", "3.0~3.5", "3.5~4.0", "4.0~4.5"];
+            var datas = [12, 16, 14, 19, 9];
             showGraph("학점 별 학생 분포도", labels, datas);
         }
 
@@ -251,11 +252,6 @@
         $.get('/msg/msgDetail', function(data){
           $('#msg_detail').html(data);
         });
-
-        // $('#msgListCloseBtn').click(function(){
-        //   clearInterval(newMsgCheck);
-        //   location.reload();
-        // });
     </script>
 
 </body>
